--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.8",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
